--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "cookies-next": "^4.2.1",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.5",
     "next-cookies": "^2.0.3",
     "react": "^18",
