--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "cookies-next": "^4.2.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "next": "14.2.5",
+    "next": "^15.0.2",
     "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
